...
    <string name="refresh_all_data">Refresh all data</string>
    <string name="settings">Settings</string>
    <string name="open_device_settings">Open device settings</string>
    <string name="cancel">Cancel</string>
    <string name="continue_text">Continue</string>
    <string name="ok">OK</string>
    <string name="got_it">Got it!</string>
    <string name="send">Send</string>
    <string name="share">Share</string>
    <string name="menu">Menu</string>
    <string name="open_menu">Open menu</string>
    <string name="open_menu_monitor_available">Open menu • Realtime Monitor available</string>
    
...
